Spec update
